content/vault/v2.x/content/docs/plugins/register.mdx
---
layout: docs
page_title: Register external plugins
description: >-
  Register and enable an external plugin with Vault
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-04-15T00:15:36.000Z
last_modified: 2026-04-15T00:15:36.000Z
# END AUTO GENERATED METADATA
---

# Register and enable external plugins

An external plugin is any authentication or secrets plugin build from external
code. Vault pre-registers commonly used external plugins (like `kv`), but you
must manually add other external plugins to the Vault plugin catalog before you
can use them with your Vault installation.

If you register an external plugin with the same name as a pre-registered plugin,
Vault defaults to the manually registered plugin when you enable a new mount
with that name.

Vault Enterprise v1.20.0 adds a `download` **(BETA)** parameter to the plugin
register API that lets Vault fetch the plugin binary directly from the
[HashiCorp releases page](https://releases.hashicorp.com). The steps below
cover the standard binary and `.zip` installation paths. For the `download`
parameter, refer to the
[`/sys/plugins/catalog` API reference](/vault/api-docs/system/plugins-catalog#download).


## Before you start

- **To register official enterprise plugins, you must have Vault v1.16.21+, 1.17.17+,
  1.18.10+, 1.19.4+, or 1.20.x+**. 
- **To register official community plugins with an extracted `.zip` file, you must have
  Vault v1.16.21+, 1.17.17+, 1.18.10+, 1.19.5+, or 1.20.x+**.

- **In HA or multi-node clusters, the plugin binary or `.zip` artifact must
  exist in `plugin_directory` on every Vault node before you register or
  reload the plugin**. The catalog entry replicates across the cluster, but
  the on-disk artifact does not — each node must have the file locally.
- **Plugin artifacts are not included in Raft snapshots**. If you restore a
  Vault snapshot, you must manually copy the correct artifact to
  `plugin_directory` on every target node before starting Vault. See
  [Restore a Vault snapshot](/vault/docs/sysadmin/snapshots/restore) for
  details.

@include 'plugins/common-requirements.mdx'


## Step 1: Prepare the plugin

@include 'plugins/prepare-plugin.mdx'


## Step 2: Update the plugin catalog

You must register your external plugin with the Vault catalog before enabling
it. Registering plugins ensures the plugin invoked by Vault is authentic and
maintains integrity.

@include 'plugins/register.mdx'


## Step 3: Enable the plugin

Enable the plugin to make it available to clients.

@include 'plugins/enable.mdx'


## Step 4: Verify the plugin status

Verify the plugin is ready for use and running the correct version.

@include 'plugins/verify-status.mdx'

## Troubleshooting

If registration or enabling fails, refer to the
[Troubleshooting](/vault/docs/plugins/plugin-management#troubleshooting) section
of the Plugin management page. Common issues include the
`Unrecognized remote plugin message` error caused by missing `mlock`
capabilities on the plugin binary.

## Related

- [Deregister a plugin](/vault/docs/plugins/deregister) — remove a plugin from
  the catalog when it is no longer needed.
